# sanoma

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml  tm.py  workflow
analysis/: domains.py  spam.py  timeline.py
docs/: cheatsheet.md
lib/: workflow.py
plot/: spam.py  timeline.py
sanoma/: __init__.py  main.py
sanoma/analysis/: __init__.py  domains.py  spam.py  timeline.py
sanoma/lib/: __init__.py  config.py  extract.py  filter.py  output.py  query.py  stats.py  workflow.py
sanoma/plot/: spam.py  timeline.py
sanoma/tools/: backup.py
workflows/: basic.yaml  spam.yaml  update.yaml  wsu.yaml
