[project]
name = "sanoma"
version = "0.2.0"
description = "Data analysis interface for Thunderbird"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "pyspark>=3.5.0",
]

[project.scripts]
sanoma = "sanoma.main:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sanoma", "sanoma.lib", "sanoma.analysis", "sanoma.plot"]

[tool.ruff]
line-length = 88
