[project]
name = "sanoma"
version = "0.2.0"
description = "Data analysis interface for Thunderbird"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "pyspark>=3.5.0",
]

[project.scripts]
sanoma = "sanoma.main:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "ty>=0.0.18",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sanoma"]

[tool.ty.src]
include = ["sanoma"]
exclude = ["docs", "data"]
respect-ignore-files = true

[tool.ruff]
line-length = 88
